--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,6 @@ align-content: start;
 
 }
 .sidebar-title {
-  border: 1px solid green;
   width: 100%;
   margin-top: 2rem;
   align-self:start;
@@ -105,8 +104,113 @@ color: #F0F9FD;
 
 .header {
   grid-column: 2/3;
+  background-color:#FFFEFE;
+  grid-template-columns: 65% 35%;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 700;
+  font-size: 20px;
 }
+.searchBar{
+  background-color: green;
+  width: 100%;
+  grid-template-columns: 10% 90%;
+  align-items: center;
+  justify-items: end;
+}
+input{
+  border-radius: 20px;
+  padding: .3rem 0 .3rem 0;
+  justify-self: stretch;
+}
+
+.notifications{
+  background-color: orange;
+  grid-template-columns: 20% 30% 50%;
+}
+
+.userName-notif{
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.user-profile{
+  background-color: aqua;
+  grid-template-columns: 30% 70%;
+}
+.greeting{
+  font-size: 14px;
+  font-weight: 600;
+
+}
+.userName{
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.buttons{
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  padding: 1rem;
+  gap: .7rem;
+}
+button{
+  padding: .4rem 0 .4rem 0;
+  border-radius: 30px;
+  background-color: #1992d4;
+  color: #F0F9FD;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+}
+
 .mainbar {
   grid-column: 2/3;
   grid-row: 2/3;
+  grid-template-columns: 2.5fr 2.5fr 1.5fr;
+  padding: 1rem;
+  gap: 1rem;
+}
+
+.projects-bar{
+  grid-column: 1/3;
+  justify-self: start;
+  align-self: center;
+  align-content: start;
+  width: 100%;
+  padding: .3rem 0 1rem 0;
+}
+
+.projects{
+  grid-column: 1/3;
+  grid-template-columns: repeat(2, minmax(250px, 1fr)) auto-fit;
+}
+
+.card{
+  display: grid;
+  height: 250px;
+
+}
+
+.icons{
+  justify-self: end;
+
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+
+
+  align-content: center;
+  gap: 1rem;
+
+}
+
+.announcements{
+  grid-column: 3/4;
+  grid-row: 1/2;
+}
+.announcements-title{
+  padding: .3rem 0 1rem 0;
+}
+
+.trending{
+  grid-column: 3/4;
 }
