--- a/styles.css
+++ b/styles.css
@@ -33,22 +33,21 @@ body {
 }
 
 .main-container {
-  grid-template-columns: minmax(max-content 25%) 1fr;
+  grid-template-columns: 1fr 5.5fr;
 }
 .main-container img {
   width: 3rem;
   border-radius: 50%;
 }
 .sidebar {
-  grid-row: 1/3;
+  grid-row: 1 / 3;
   background-color: #1992d4;
   grid-template-rows: 1fr repeat(2, 2fr);
   grid-auto-rows: min-content;
   padding: 1rem 0 0 1rem;
-align-content: start;
-
-
+  align-content: start;
 }
+
 .sidebar-title {
   width: 100%;
   margin-top: 2rem;
@@ -77,12 +76,12 @@ align-content: start;
   display: grid;
   grid-template-columns: 16% 3fr;
   align-items: center;
-  /* gap: .7rem; */
   font-family: 'Fira Sans', sans-serif;
   font-weight: 700;
   font-size: 20px;
   color: #F0F9FD;
 }
+
 .sidebar-branding-menu{
 justify-items: start;
 align-content: start;
@@ -98,24 +97,27 @@ color: #F0F9FD;
   display: grid;
   grid-template-columns: 16% 3fr;
   align-items: center;
-  /* gap: .7rem; */
   width: 100%;
 }
 
 .header {
   grid-column: 2/3;
   background-color:#FFFEFE;
-  grid-template-columns: 65% 35%;
+  grid-template-columns: 2fr 2fr minmax(250px, 2fr);
   font-family: 'Fira Sans', sans-serif;
   font-weight: 700;
   font-size: 20px;
+  height: minmax(120px,24vh);
 }
+
 .searchBar{
-  background-color: green;
+  /* background-color: green; */
+  grid-column: 1/3;
   width: 100%;
   grid-template-columns: 10% 90%;
-  align-items: center;
-  justify-items: end;
+  place-items: center;
+  justify-content: end;
+  padding: 1rem .5rem 1rem 0;
 }
 input{
   border-radius: 20px;
@@ -124,80 +126,110 @@ input{
 }
 
 .notifications{
-  background-color: orange;
-  grid-template-columns: 20% 30% 50%;
-}
-
-.userName-notif{
-  font-size: 20px;
-  font-weight: 600;
+  grid-auto-flow: column;
+  place-items: center;
+  justify-content: start;
+  gap: 1rem;
+  padding-left: 2rem;
 }
 
 .user-profile{
-  background-color: aqua;
-  grid-template-columns: 30% 70%;
+  grid-column: 1/3;
+  /* background-color: aqua; */
+  grid-auto-flow: column;
+  justify-content: start;
+  place-items: center;
+  gap: 1rem;
+  padding: 1rem 0 1rem 3rem;
 }
+
 .greeting{
   font-size: 14px;
   font-weight: 600;
-
 }
+
 .userName{
   font-size: 24px;
   font-weight: 600;
 }
 
 .buttons{
-  grid-template-columns: repeat(3, 1fr);
+  /* padding: .5rem 2rem 0 2rem; */
+  grid-auto-flow: column;
+  gap: 2rem;
   align-items: center;
-  padding: 1rem;
-  gap: .7rem;
+  align-content: center;
+  justify-content: stretch;
+
 }
+
 button{
   padding: .4rem 0 .4rem 0;
   border-radius: 30px;
+  border: none;
   background-color: #1992d4;
   color: #F0F9FD;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 600;
   font-size: 16px;
 }
+button:active{
+  outline: orange solid 3px;
+}
 
 .mainbar {
   grid-column: 2/3;
-  grid-row: 2/3;
-  grid-template-columns: 2.5fr 2.5fr 1.5fr;
-  padding: 1rem;
-  gap: 1rem;
+  /* grid-row: 2/3; */
+  grid-template-columns: repeat(2, 2.5fr) 1.5fr;
+  padding: 1.5rem 1.5rem 1rem 1.5rem;
+  gap: 1rem 1.5rem;
 }
 
 .projects-bar{
   grid-column: 1/3;
-  justify-self: start;
+  /* grid-row: 2/5; */
+  justify-self: stretch;
   align-self: center;
-  align-content: start;
-  width: 100%;
   padding: .3rem 0 1rem 0;
+
+}
+.announcements-title{
+  grid-column: 3/4;
+  grid-row: 1/2;
 }
 
 .projects{
   grid-column: 1/3;
-  grid-template-columns: repeat(2, minmax(250px, 1fr)) auto-fit;
+  gap: 1.5rem;
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-auto-rows: 250px;
+
 }
 
 .card{
+  background-color: #FFFFFF;
+  border-radius: 15px;
   display: grid;
   height: 250px;
+  padding-left: 1rem;
+  justify-items: start;
+  align-items: end;
+  border-left: .7rem solid #F1B529;
+}
 
+
+
+.card > p:nth-child(2){
+  padding-top: .5rem;
+  align-self: start;
 }
 
 .icons{
+  align-self: center;
   justify-self: end;
-
+  padding-right: 1rem;
   display: grid;
   grid-template-columns: repeat(3,1fr);
-
-
   align-content: center;
   gap: 1rem;
 
@@ -205,12 +237,61 @@ button{
 
 .announcements{
   grid-column: 3/4;
-  grid-row: 1/2;
+  grid-row: 2/3;
+  justify-items: center;
+  align-items: center;
+  align-content: start;
+
 }
 .announcements-title{
+  grid-column: 3/4;
   padding: .3rem 0 1rem 0;
+}
+.announcements-bar.grid{
+  border-radius: 20px;
+  background-color: #FFFFFF;
+}
+.announcements-bar > div{
+  padding: 1rem;
+}
+
+.trending-title{
+justify-self: start;
+align-items: center;
+width: 100%;
+padding: 1rem 0 1rem 0;
+background-color: #E3E8F1;
+  /* border: 2px solid blue; */
 }
 
 .trending{
-  grid-column: 3/4;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+  width: 100%;
+  height: 100%;
+  justify-items: start;
+  gap: 2rem;
+  padding: 1rem;
+
+}
+
+.trending-container{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(2,1fr);
+  width: 100%;
+  align-items: end;
+  gap:0 1rem;
+  /* padding: 1rem 0 1rem 0; */
+}
+.trending-container img{
+  grid-row: 1/3;
+  min-width: 50px;
+  align-self: center;
+  justify-self: end;
+  border: 1px solid red;
+}
+.trending-container > p:nth-child(3){
+  grid-column: 2/3;
+  align-self: start;
 }
