--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ body {
 }
 
 .main-container {
-  grid-template-columns: 1fr 5.5fr;
+  grid-template-columns: 20% 4fr;
 }
 .main-container img {
   width: 3rem;
@@ -42,28 +42,32 @@ body {
 .sidebar {
   grid-row: 1 / 3;
   background-color: #1992d4;
-  grid-template-rows: 1fr repeat(2, 2fr);
-  grid-auto-rows: min-content;
+  grid-template-rows: 1fr 2fr 3fr;
   padding: 1rem 0 0 1rem;
-  align-content: start;
+  align-items: start;
+  justify-items: center;
+  justify-content: start;
+  /* align-content: start; */
 }
 
 .sidebar-title {
   width: 100%;
   margin-top: 2rem;
   align-self:start;
-  color: #F0F9FD;
-  grid-template-columns: 16% 3fr;
   align-items: center;
+  color: #F0F9FD;
+  grid-template-columns: 1fr 3fr;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 700;
   font-size: 20px;
   gap: .7rem;
+  /* background-color: red; */
 }
 
-.sidebar-title svg{
-  background-color:blue;
-  width: 150px;
+.sidebar-title > svg{
+  width: 50px;
+  align-self: start;
+  justify-self: start;
 }
 
 .sidebar-nav-menu {
@@ -71,15 +75,21 @@ body {
   grid-template-columns: 1fr;
   align-content: start;
   gap: 1rem;
+  /* background-color: blue; */
+
 }
 .sidebar-nav-menu .menu {
   display: grid;
-  grid-template-columns: 16% 3fr;
+  grid-template-columns: 1fr 5fr;
   align-items: center;
   font-family: 'Fira Sans', sans-serif;
   font-weight: 700;
   font-size: 20px;
   color: #F0F9FD;
+  gap: 2rem;
+}
+.sidebar-nav-menu .menu > svg, .sidebar-branding-menu .menu > svg{
+  width: 30px;
 }
 
 .sidebar-branding-menu{
@@ -91,6 +101,7 @@ font-family: 'Fira Sans', sans-serif;
 font-weight: 700;
 font-size: 20px;
 color: #F0F9FD;
+/* background-color: purple; */
 }
 
 .sidebar-branding-menu .menu{
@@ -98,6 +109,7 @@ color: #F0F9FD;
   grid-template-columns: 16% 3fr;
   align-items: center;
   width: 100%;
+  gap: 2rem;
 }
 
 .header {
@@ -123,6 +135,10 @@ input{
   border-radius: 20px;
   padding: .3rem 0 .3rem 0;
   justify-self: stretch;
+  border: none;
+  outline: none;
+  background-color: #E3E8F1;
+
 }
 
 .notifications{
@@ -141,6 +157,10 @@ input{
   place-items: center;
   gap: 1rem;
   padding: 1rem 0 1rem 3rem;
+}
+
+.user-profile > img{
+width: 80px;
 }
 
 .greeting{
@@ -201,7 +221,7 @@ button:active{
 .projects{
   grid-column: 1/3;
   gap: 1.5rem;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-auto-rows: 250px;
 
 }
@@ -214,7 +234,11 @@ button:active{
   padding-left: 1rem;
   justify-items: start;
   align-items: end;
+  grid-template-rows: repeat(3,1fr);
   border-left: .7rem solid #F1B529;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 800;
+  font-size: 20px;
 }
 
 
@@ -222,6 +246,9 @@ button:active{
 .card > p:nth-child(2){
   padding-top: .5rem;
   align-self: start;
+  color: #626362;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .icons{
@@ -250,9 +277,19 @@ button:active{
 .announcements-bar.grid{
   border-radius: 20px;
   background-color: #FFFFFF;
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 800;
+  font-size: 20px;
 }
 .announcements-bar > div{
   padding: 1rem;
+  border-bottom: 1px solid #626362;
+}
+
+.announcements-bar > div > p:nth-child(2){
+  color:#626362;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 .trending-title{
@@ -272,7 +309,9 @@ background-color: #E3E8F1;
   justify-items: start;
   gap: 2rem;
   padding: 1rem;
-
+  font-family: 'Fira Sans', sans-serif;
+  font-weight: 400;
+  font-size: 15px;
 }
 
 .trending-container{
@@ -289,9 +328,11 @@ background-color: #E3E8F1;
   min-width: 50px;
   align-self: center;
   justify-self: end;
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 .trending-container > p:nth-child(3){
   grid-column: 2/3;
   align-self: start;
+  color:#626362;
+
 }
